--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 19-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1122,7 +1122,7 @@
 <td class='VargaStyle1'>अ॒द॒त्र॒या द॑यते॒ वार्या᳚णि पू॒षा भगो॒, अदि॑ति॒र्वस्त॑ उ॒स्रः |<span class='RishiDevChandas'>{आत्रेयः प्रतिप्रभुः | विश्वदेवाः | त्रिष्टुप्}</span><p>इन्द्रो॒ विष्णु॒र्वरु॑णो मि॒त्रो, अ॒ग्निरहा᳚नि भ॒द्रा ज॑नयन्त द॒स्माः ||<span class='MantraNumbering'>{3/5}{4.3.3.3}{5.49.3}{5.4.5.3}{403, 4055}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>तन्नो᳚, अन॒र्वा स॑वि॒ता वरू᳚थं॒ तत्‌ सिन्ध॑व इ॒षय᳚न्तो॒, अनु॑ ग्मन् |<span class='RishiDevChandas'>{आत्रेयः प्रतिप्रभुः | विश्वदेवाः | त्रिष्टुप्}</span><p>उप॒ यद्वोचे᳚, अध्व॒रस्य॒ होता᳚ रा॒यः स्या᳚म॒ पत॑यो॒ वाज॑रत्नाः ||<span class='MantraNumbering'>{4/5}{4.3.3.4}{5.49.4}{5.4.5.4}{403, 4056}</span></td>
+<td class='VargaStyle1'>तन्नो᳚, अन॒र्वा स॑वि॒ता वरू᳚थं॒ तत्‌ सिन्ध॑व इ॒षय᳚न्तो॒, अनु॑ ग्मन् |<span class='RishiDevChandas'>{आत्रेयः प्रतिप्रभुः | विश्वदेवाः | त्रिष्टुप्}</span><p>उप॒ यद्‌ वोचे᳚, अध्व॒रस्य॒ होता᳚ रा॒यः स्या᳚म॒ पत॑यो॒ वाज॑रत्नाः ||<span class='MantraNumbering'>{4/5}{4.3.3.4}{5.49.4}{5.4.5.4}{403, 4056}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>प्र ये वसु॑भ्य॒ ईव॒दा नमो॒ दुर्ये मि॒त्रे वरु॑णे सू॒क्तवा᳚चः |<span class='RishiDevChandas'>{आत्रेयः प्रतिप्रभुः | विश्वदेवाः | तृणपाणिः}</span><p>अवै॒त्वभ्वं᳚ कृणु॒ता वरी᳚यो दि॒वस्पृ॑थि॒व्योरव॑सा मदेम ||<span class='MantraNumbering'>{5/5}{4.3.3.5}{5.49.5}{5.4.5.5}{403, 4057}</span></td>
@@ -1203,7 +1203,7 @@
 <td class='VargaStyle2'>ते हि स्थि॒रस्य॒ शव॑सः॒ सखा᳚यः॒ सन्ति॑ धृष्णु॒या |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>ते याम॒न्ना धृ॑ष॒द्विन॒स्त्मना᳚ पान्ति॒ शश्व॑तः ||<span class='MantraNumbering'>{2/17}{4.3.8.2}{5.52.2}{5.4.8.2}{406, 4079}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ते स्य॒न्द्रासो॒ नोक्षणो ऽति॑ ष्कन्दन्ति॒ शर्व॑रीः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>म॒रुता॒मधा॒ महो᳚ दि॒वि क्ष॒मा च॑ मन्महे ||<span class='MantraNumbering'>{3/17}{4.3.8.3}{5.52.3}{5.4.8.3}{406, 4080}</span></td>
+<td class='VargaStyle2'>ते स्प॒न्द्रासो॒ नोक्षणो ऽति॑ ष्कन्दन्ति॒ शर्व॑रीः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>म॒रुता॒मधा॒ महो᳚ दि॒वि क्ष॒मा च॑ मन्महे ||<span class='MantraNumbering'>{3/17}{4.3.8.3}{5.52.3}{5.4.8.3}{406, 4080}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>म॒रुत्सु॑ वो दधीमहि॒ स्तोमं᳚ य॒ज्ञं च॑ धृष्णु॒या |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>विश्वे॒ ये मानु॑षा यु॒गा पान्ति॒ मर्त्यं᳚ रि॒षः ||<span class='MantraNumbering'>{4/17}{4.3.8.4}{5.52.4}{5.4.8.4}{406, 4081}</span></td>
@@ -1251,7 +1251,7 @@
 <td class='SuktaLabel'>[45] कोवेदेति षोळशर्चस्य सूक्तस्यात्रेयः श्यावाश्वोमरुतः क्रमेणककुप्‌बृहत्यनुष्टुप्पुर‌उष्णिक्ककुप्‌ सतोबृहती सतोबृहती गायत्री सतोबृहती ककुप्‌ककुब्गायत्री सतोबृहती सतोबृहती ककुप्‌ सतोबृहत्यः |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>को वे᳚द॒ जान॑मेषां॒ को वा᳚ पु॒रा सु॒म्नेष्वा᳚स म॒रुता᳚म् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | ककुप्}</span><p>यद्यु॑यु॒ज्रे कि॑ला॒स्यः॑ ||<span class='MantraNumbering'>{1/16}{4.3.11.1}{5.53.1}{5.4.9.1}{407, 4095}</span></td>
+<td class='VargaStyle1'>को वे᳚द॒ जान॑मेषां॒ को वा᳚ पु॒रा सु॒म्नेष्वा᳚स म॒रुता᳚म् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | ककुप्}</span><p>यद्‌ यु॑यु॒ज्रे कि॑ला॒स्यः॑ ||<span class='MantraNumbering'>{1/16}{4.3.11.1}{5.53.1}{5.4.9.1}{407, 4095}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ऐतान्‌ रथे᳚षु त॒स्थुषः॒ कः शु॑श्राव क॒था य॑युः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | बृहती}</span><p>कस्मै᳚ सस्रुः सु॒दासे॒, अन्वा॒पय॒ इळा᳚भिर्वृ॒ष्टयः॑ स॒ह ||<span class='MantraNumbering'>{2/16}{4.3.11.2}{5.53.2}{5.4.9.2}{407, 4096}</span></td>
