--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 29-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1482,7 +1482,7 @@
 <td class='VargaStyle2'>ತೇ ಹಿ ಸ್ಥಿ॒ರಸ್ಯ॒ ಶವ॑ಸಃ॒ ಸಖಾ᳚ಯಃ॒ ಸಂತಿ॑ ಧೃಷ್ಣು॒ಯಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ತೇ ಯಾಮ॒ನ್ನಾ ಧೃ॑ಷ॒ದ್ವಿನ॒ಸ್ತ್ಮನಾ᳚ ಪಾಂತಿ॒ ಶಶ್ವ॑ತಃ ||<span class='MantraNumbering'>{2/17}{5.52.2}{5.4.8.2}{4.3.8.2}{406, 4079}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇ ಸ್ಯಂ॒ದ್ರಾಸೋ॒ ನೋಕ್ಷಣೋ ಽತಿ॑ ಷ್ಕಂದಂತಿ॒ ಶರ್‍ವ॑ರೀಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಮ॒ರುತಾ॒ಮಧಾ॒ ಮಹೋ᳚ ದಿ॒ವಿ ಕ್ಷ॒ಮಾ ಚ॑ ಮನ್ಮಹೇ ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
+<td class='VargaStyle2'>ತೇ ಸ್ಪಂ॒ದ್ರಾಸೋ॒ ನೋಕ್ಷಣೋ ಽತಿ॑ ಷ್ಕಂದಂತಿ॒ ಶರ್‍ವ॑ರೀಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಮ॒ರುತಾ॒ಮಧಾ॒ ಮಹೋ᳚ ದಿ॒ವಿ ಕ್ಷ॒ಮಾ ಚ॑ ಮನ್ಮಹೇ ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಮ॒ರುತ್ಸು॑ ವೋ ದಧೀಮಹಿ॒ ಸ್ತೋಮಂ᳚ ಯ॒ಜ್ಞಂ ಚ॑ ಧೃಷ್ಣು॒ಯಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ವಿಶ್ವೇ॒ ಯೇ ಮಾನು॑ಷಾ ಯು॒ಗಾ ಪಾಂತಿ॒ ಮರ್‍ತ್ಯಂ᳚ ರಿ॒ಷಃ ||<span class='MantraNumbering'>{4/17}{5.52.4}{5.4.8.4}{4.3.8.4}{406, 4081}</span></td>
@@ -1530,13 +1530,13 @@
 <td class='SuktaLabel'>[53] ಕೋವೇದೇತಿ ಷೋಳಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತಃ ಕ್ರಮೇಣಕಕುಪ್‌ಬೃಹತ್ಯನುಷ್ಟುಪ್ಪುರ‌ಉಷ್ಣಿಕ್ಕಕುಪ್‌ ಸತೋಬೃಹತೀ ಸತೋಬೃಹತೀ ಗಾಯತ್ರೀ ಸತೋಬೃಹತೀ ಕಕುಪ್‌ಕಕುಬ್ಗಾಯತ್ರೀ ಸತೋಬೃಹತೀ ಸತೋಬೃಹತೀ ಕಕುಪ್‌ ಸತೋಬೃಹತ್ಯಃ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಕೋ ವೇ᳚ದ॒ ಜಾನ॑ಮೇಷಾಂ॒ ಕೋ ವಾ᳚ ಪು॒ರಾ ಸು॒ಮ್ನೇಷ್ವಾ᳚ಸ ಮ॒ರುತಾಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಕಕುಪ್}</span><p>ಯದ್ಯು॑ಯು॒ಜ್ರೇ ಕಿ॑ಲಾ॒ಸ್ಯಃ॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
+<td class='VargaStyle1'>ಕೋ ವೇ᳚ದ॒ ಜಾನ॑ಮೇಷಾಂ॒ ಕೋ ವಾ᳚ ಪು॒ರಾ ಸು॒ಮ್ನೇಷ್ವಾ᳚ಸ ಮ॒ರುತಾಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಕಕುಪ್}</span><p>ಯದ್‌ ಯು॑ಯು॒ಜ್ರೇ ಕಿ॑ಲಾ॒ಸ್ಯಃ॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಐತಾನ್‌ ರಥೇ᳚ಷು ತ॒ಸ್ಥುಷಃ॒ ಕಃ ಶು॑ಶ್ರಾವ ಕ॒ಥಾ ಯ॑ಯುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಬೃಹತೀ}</span><p>ಕಸ್ಮೈ᳚ ಸಸ್ರುಃ ಸು॒ದಾಸೇ॒, ಅನ್ವಾ॒ಪಯ॒ ಇಳಾ᳚ಭಿರ್‍ವೃ॒ಷ್ಟಯಃ॑ ಸ॒ಹ ||<span class='MantraNumbering'>{2/16}{5.53.2}{5.4.9.2}{4.3.11.2}{407, 4096}</span></td>
+<td class='VargaStyle1'>ಐತಾನ್‌ ರಥೇ᳚ಷು ತ॒ಸ್ಥುಷಃ॒ ಕಃ ಶು॑ಶ್ರಾವ ಕ॒ಥಾ ಯ॑ಯುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಬೃಹತೀ}</span><p>ಕಸ್ಮೈ᳚ ಸಸ್ರುಃ ಸು॒ದಾಸೇ॒, ಅನ್ವಾ॒ಪಯ॒ ಇಳಾ᳚ಭಿರ್‌ವೃ॒ಷ್ಟಯಃ॑ ಸ॒ಹ ||<span class='MantraNumbering'>{2/16}{5.53.2}{5.4.9.2}{4.3.11.2}{407, 4096}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತೇ ಮ॑ ಆಹು॒ರ್‍ಯ ಆ᳚ಯ॒ಯುರುಪ॒ ದ್ಯುಭಿ॒ರ್‍ವಿಭಿ॒ರ್ಮದೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ನರೋ॒ ಮರ್‍ಯಾ᳚, ಅರೇ॒ಪಸ॑ ಇ॒ಮಾನ್‌ ಪಶ್ಯ॒ನ್ನಿತಿ॑ ಷ್ಟುಹಿ ||<span class='MantraNumbering'>{3/16}{5.53.3}{5.4.9.3}{4.3.11.3}{407, 4097}</span></td>
+<td class='VargaStyle1'>ತೇ ಮ॑ ಆಹು॒ರ್‍ಯ ಆ᳚ಯ॒ಯುರುಪ॒ ದ್ಯುಭಿ॒ರ್‌ವಿಭಿ॒ರ್ಮದೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ನರೋ॒ ಮರ್‍ಯಾ᳚, ಅರೇ॒ಪಸ॑ ಇ॒ಮಾನ್‌ ಪಶ್ಯ॒ನ್ನಿತಿ॑ ಷ್ಟುಹಿ ||<span class='MantraNumbering'>{3/16}{5.53.3}{5.4.9.3}{4.3.11.3}{407, 4097}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯೇ, ಅಂ॒ಜಿಷು॒ ಯೇ ವಾಶೀ᳚ಷು॒ ಸ್ವಭಾ᳚ನವಃ ಸ್ರ॒ಕ್ಷು ರು॒ಕ್ಮೇಷು॑ ಖಾ॒ದಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪುರಉಷ್ಣಿಕ್}</span><p>ಶ್ರಾ॒ಯಾ ರಥೇ᳚ಷು॒ ಧನ್ವ॑ಸು ||<span class='MantraNumbering'>{4/16}{5.53.4}{5.4.9.4}{4.3.11.4}{407, 4098}</span></td>
@@ -1548,7 +1548,7 @@
 <td class='VargaStyle2'>ಆ ಯಂ ನರಃ॑ ಸು॒ದಾನ॑ವೋ ದದಾ॒ಶುಷೇ᳚ ದಿ॒ವಃ ಕೋಶ॒ಮಚು॑ಚ್ಯವುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿ ಪ॒ರ್ಜನ್ಯಂ᳚ ಸೃಜಂತಿ॒ ರೋದ॑ಸೀ॒, ಅನು॒ ಧನ್ವ॑ನಾ ಯಂತಿ ವೃ॒ಷ್ಟಯಃ॑ ||<span class='MantraNumbering'>{6/16}{5.53.6}{5.4.9.6}{4.3.12.1}{407, 4100}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃ ಸಿಂಧ॑ವಃ॒, ಕ್ಷೋದ॑ಸಾ॒ ರಜಃ॒ ಪ್ರ ಸ॑ಸ್ರುರ್ಧೇ॒ನವೋ᳚ ಯಥಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ಸ್ಯ॒ನ್ನಾ, ಅಶ್ವಾ᳚, ಇ॒ವಾಧ್ವ॑ನೋ ವಿ॒ಮೋಚ॑ನೇ॒ ವಿ ಯದ್‌ ವರ್‍ತಂ᳚ತ ಏ॒ನ್ಯಃ॑ ||<span class='MantraNumbering'>{7/16}{5.53.7}{5.4.9.7}{4.3.12.2}{407, 4101}</span></td>
+<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃ ಸಿಂಧ॑ವಃ॒, ಕ್ಷೋದ॑ಸಾ॒ ರಜಃ॒ ಪ್ರ ಸ॑ಸ್ರುರ್‌ಧೇ॒ನವೋ᳚ ಯಥಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ಸ್ಯ॒ನ್ನಾ, ಅಶ್ವಾ᳚, ಇ॒ವಾಧ್ವ॑ನೋ ವಿ॒ಮೋಚ॑ನೇ॒ ವಿ ಯದ್‌ ವರ್‍ತಂ᳚ತ ಏ॒ನ್ಯಃ॑ ||<span class='MantraNumbering'>{7/16}{5.53.7}{5.4.9.7}{4.3.12.2}{407, 4101}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಆ ಯಾ᳚ತ ಮರುತೋ ದಿ॒ವ ಆಂತರಿ॑ಕ್ಷಾದ॒ಮಾದು॒ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಗಾಯತ್ರೀ}</span><p>ಮಾವ॑ ಸ್ಥಾತ ಪರಾ॒ವತಃ॑ ||<span class='MantraNumbering'>{8/16}{5.53.8}{5.4.9.8}{4.3.12.3}{407, 4102}</span></td>
