--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format3/RVS-Kannada-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format3/RVS-Kannada-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 29-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1536,7 +1536,7 @@
 <td class='VargaStyle2'>ತೇಹಿಸ್ಥಿ॒ರಸ್ಯ॒ಶವ॑ಸಃ॒ಸಖಾ᳚ಯಃ॒ಸಂತಿ॑ಧೃಷ್ಣು॒ಯಾ | ತೇಯಾಮ॒ನ್ನಾಧೃ॑ಷ॒ದ್ವಿನ॒ಸ್ತ್ಮನಾ᳚ಪಾಂತಿ॒ಶಶ್ವ॑ತಃ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇಸ್ಯಂ॒ದ್ರಾಸೋ॒ನೋಕ್ಷಣೋಽತಿ॑ಷ್ಕಂದಂತಿ॒ಶರ್‍ವ॑ರೀಃ | ಮ॒ರುತಾ॒ಮಧಾ॒ಮಹೋ᳚ದಿ॒ವಿಕ್ಷ॒ಮಾಚ॑ಮನ್ಮಹೇ || 3 || </td>
+<td class='VargaStyle2'>ತೇಸ್ಪಂ॒ದ್ರಾಸೋ॒ನೋಕ್ಷಣೋಽತಿ॑ಷ್ಕಂದಂತಿ॒ಶರ್‍ವ॑ರೀಃ | ಮ॒ರುತಾ॒ಮಧಾ॒ಮಹೋ᳚ದಿ॒ವಿಕ್ಷ॒ಮಾಚ॑ಮನ್ಮಹೇ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಮ॒ರುತ್ಸು॑ವೋದಧೀಮಹಿ॒ಸ್ತೋಮಂ᳚ಯ॒ಜ್ಞಂಚ॑ಧೃಷ್ಣು॒ಯಾ | ವಿಶ್ವೇ॒ಯೇಮಾನು॑ಷಾಯು॒ಗಾಪಾಂತಿ॒ಮರ್‍ತ್ಯಂ᳚ರಿ॒ಷಃ || 4 || </td>
@@ -1585,13 +1585,13 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಕೋವೇ᳚ದ॒ಜಾನ॑ಮೇಷಾಂ॒ಕೋವಾ᳚ಪು॒ರಾಸು॒ಮ್ನೇಷ್ವಾ᳚ಸಮ॒ರುತಾಂ᳚ | ಯದ್ಯು॑ಯು॒ಜ್ರೇಕಿ॑ಲಾ॒ಸ್ಯಃ॑ || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
+<td class='VargaStyle1'>ಕೋವೇ᳚ದ॒ಜಾನ॑ಮೇಷಾಂ॒ಕೋವಾ᳚ಪು॒ರಾಸು॒ಮ್ನೇಷ್ವಾ᳚ಸಮ॒ರುತಾಂ᳚ | ಯದ್‌ಯು॑ಯು॒ಜ್ರೇಕಿ॑ಲಾ॒ಸ್ಯಃ॑ || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಐತಾನ್‌ರಥೇ᳚ಷುತ॒ಸ್ಥುಷಃ॒ಕಃಶು॑ಶ್ರಾವಕ॒ಥಾಯ॑ಯುಃ |<p>ಕಸ್ಮೈ᳚ಸಸ್ರುಃಸು॒ದಾಸೇ॒,ಅನ್ವಾ॒ಪಯ॒ಇಳಾ᳚ಭಿರ್‍ವೃ॒ಷ್ಟಯಃ॑ಸ॒ಹ || 2 || </td>
+<td class='VargaStyle1'>ಐತಾನ್‌ರಥೇ᳚ಷುತ॒ಸ್ಥುಷಃ॒ಕಃಶು॑ಶ್ರಾವಕ॒ಥಾಯ॑ಯುಃ |<p>ಕಸ್ಮೈ᳚ಸಸ್ರುಃಸು॒ದಾಸೇ॒,ಅನ್ವಾ॒ಪಯ॒ಇಳಾ᳚ಭಿರ್‌ವೃ॒ಷ್ಟಯಃ॑ಸ॒ಹ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತೇಮ॑ಆಹು॒ರ್‍ಯಆ᳚ಯ॒ಯುರುಪ॒ದ್ಯುಭಿ॒ರ್‍ವಿಭಿ॒ರ್ಮದೇ᳚ | ನರೋ॒ಮರ್‍ಯಾ᳚,ಅರೇ॒ಪಸ॑ಇ॒ಮಾನ್‌ಪಶ್ಯ॒ನ್ನಿತಿ॑ಷ್ಟುಹಿ || 3 || </td>
+<td class='VargaStyle1'>ತೇಮ॑ಆಹು॒ರ್‍ಯಆ᳚ಯ॒ಯುರುಪ॒ದ್ಯುಭಿ॒ರ್‌ವಿಭಿ॒ರ್ಮದೇ᳚ | ನರೋ॒ಮರ್‍ಯಾ᳚,ಅರೇ॒ಪಸ॑ಇ॒ಮಾನ್‌ಪಶ್ಯ॒ನ್ನಿತಿ॑ಷ್ಟುಹಿ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯೇ,ಅಂ॒ಜಿಷು॒ಯೇವಾಶೀ᳚ಷು॒ಸ್ವಭಾ᳚ನವಃಸ್ರ॒ಕ್ಷುರು॒ಕ್ಮೇಷು॑ಖಾ॒ದಿಷು॑ | ಶ್ರಾ॒ಯಾರಥೇ᳚ಷು॒ಧನ್ವ॑ಸು || 4 || </td>
@@ -1603,7 +1603,7 @@
 <td class='VargaStyle2'>ಆಯಂನರಃ॑ಸು॒ದಾನ॑ವೋದದಾ॒ಶುಷೇ᳚ದಿ॒ವಃಕೋಶ॒ಮಚು॑ಚ್ಯವುಃ |<p>ವಿಪ॒ರ್ಜನ್ಯಂ᳚ಸೃಜಂತಿ॒ರೋದ॑ಸೀ॒,ಅನು॒ಧನ್ವ॑ನಾಯಂತಿವೃ॒ಷ್ಟಯಃ॑ || 6 || <span class='MantraNumbering'>ವರ್ಗ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃಸಿಂಧ॑ವಃ॒,ಕ್ಷೋದ॑ಸಾ॒ರಜಃ॒ಪ್ರಸ॑ಸ್ರುರ್ಧೇ॒ನವೋ᳚ಯಥಾ |<p>ಸ್ಯ॒ನ್ನಾ,ಅಶ್ವಾ᳚,ಇ॒ವಾಧ್ವ॑ನೋವಿ॒ಮೋಚ॑ನೇ॒ವಿಯದ್‌ವರ್‍ತಂ᳚ತಏ॒ನ್ಯಃ॑ || 7 || </td>
+<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃಸಿಂಧ॑ವಃ॒,ಕ್ಷೋದ॑ಸಾ॒ರಜಃ॒ಪ್ರಸ॑ಸ್ರುರ್‌ಧೇ॒ನವೋ᳚ಯಥಾ |<p>ಸ್ಯ॒ನ್ನಾ,ಅಶ್ವಾ᳚,ಇ॒ವಾಧ್ವ॑ನೋವಿ॒ಮೋಚ॑ನೇ॒ವಿಯದ್‌ವರ್‍ತಂ᳚ತಏ॒ನ್ಯಃ॑ || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಆಯಾ᳚ತಮರುತೋದಿ॒ವಆಂತರಿ॑ಕ್ಷಾದ॒ಮಾದು॒ತ | ಮಾವ॑ಸ್ಥಾತಪರಾ॒ವತಃ॑ || 8 || </td>
