--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format1/RVS-Malayalam-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 19-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1401,7 +1401,7 @@
 <td class='VargaStyle1'>അ॒ദ॒ത്ര॒യാ ദ॑യതേ॒ വാര്യാ᳚ണി പൂ॒ഷാ ഭഗോ॒, അദി॑തി॒ർവസ്ത॑ ഉ॒സ്രഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഇന്ദ്രോ॒ വിഷ്ണു॒ർവരു॑ണോ മി॒ത്രോ, അ॒ഗ്നിരഹാ᳚നി ഭ॒ദ്രാ ജ॑നയന്ത ദ॒സ്മാഃ ||<span class='MantraNumbering'>{3/5}{5.49.3}{5.4.5.3}{4.3.3.3}{403, 4055}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തന്നോ᳚, അന॒ർവാ സ॑വി॒താ വരൂ᳚ഥം॒ തത്‌ സിന്ധ॑വ ഇ॒ഷയ᳚ന്തോ॒, അനു॑ ഗ്മൻ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉപ॒ യദ്വോചേ᳚, അധ്വ॒രസ്യ॒ ഹോതാ᳚ രാ॒യഃ സ്യാ᳚മ॒ പത॑യോ॒ വാജ॑രത്നാഃ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
+<td class='VargaStyle1'>തന്നോ᳚, അന॒ർവാ സ॑വി॒താ വരൂ᳚ഥം॒ തത്‌ സിന്ധ॑വ ഇ॒ഷയ᳚ന്തോ॒, അനു॑ ഗ്മൻ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉപ॒ യദ്‌ വോചേ᳚, അധ്വ॒രസ്യ॒ ഹോതാ᳚ രാ॒യഃ സ്യാ᳚മ॒ പത॑യോ॒ വാജ॑രത്നാഃ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പ്ര യേ വസു॑ഭ്യ॒ ഈവ॒ദാ നമോ॒ ദുര്യേ മി॒ത്രേ വരു॑ണേ സൂ॒ക്തവാ᳚ചഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | തൃണപാണിഃ}</span><p>അവൈ॒ത്വഭ്വം᳚ കൃണു॒താ വരീ᳚യോ ദി॒വസ്പൃ॑ഥി॒വ്യോരവ॑സാ മദേമ ||<span class='MantraNumbering'>{5/5}{5.49.5}{5.4.5.5}{4.3.3.5}{403, 4057}</span></td>
@@ -1482,7 +1482,7 @@
 <td class='VargaStyle2'>തേ ഹി സ്ഥി॒രസ്യ॒ ശവ॑സഃ॒ സഖാ᳚യഃ॒ സന്തി॑ ധൃഷ്ണു॒യാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>തേ യാമ॒ന്നാ ധൃ॑ഷ॒ദ്വിന॒സ്ത്മനാ᳚ പാന്തി॒ ശശ്വ॑തഃ ||<span class='MantraNumbering'>{2/17}{5.52.2}{5.4.8.2}{4.3.8.2}{406, 4079}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേ സ്യ॒ന്ദ്രാസോ॒ നോക്ഷണോ ഽതി॑ ഷ്കന്ദന്തി॒ ശർവ॑രീഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>മ॒രുതാ॒മധാ॒ മഹോ᳚ ദി॒വി ക്ഷ॒മാ ച॑ മന്മഹേ ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
+<td class='VargaStyle2'>തേ സ്പ॒ന്ദ്രാസോ॒ നോക്ഷണോ ഽതി॑ ഷ്കന്ദന്തി॒ ശർവ॑രീഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>മ॒രുതാ॒മധാ॒ മഹോ᳚ ദി॒വി ക്ഷ॒മാ ച॑ മന്മഹേ ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>മ॒രുത്സു॑ വോ ദധീമഹി॒ സ്തോമം᳚ യ॒ജ്ഞം ച॑ ധൃഷ്ണു॒യാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>വിശ്വേ॒ യേ മാനു॑ഷാ യു॒ഗാ പാന്തി॒ മർത്യം᳚ രി॒ഷഃ ||<span class='MantraNumbering'>{4/17}{5.52.4}{5.4.8.4}{4.3.8.4}{406, 4081}</span></td>
@@ -1530,7 +1530,7 @@
 <td class='SuktaLabel'>[53] കോവേദേതി ഷോളശർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വോമരുതഃ ക്രമേണകകുപ്‌ബൃഹത്യനുഷ്ടുപ്പുര‌ഉഷ്ണിക്കകുപ്‌ സതോബൃഹതീ സതോബൃഹതീ ഗായത്രീ സതോബൃഹതീ കകുപ്‌കകുബ്ഗായത്രീ സതോബൃഹതീ സതോബൃഹതീ കകുപ്‌ സതോബൃഹത്യഃ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>കോ വേ᳚ദ॒ ജാന॑മേഷാം॒ കോ വാ᳚ പു॒രാ സു॒മ്നേഷ്വാ᳚സ മ॒രുതാം᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | കകുപ്}</span><p>യദ്യു॑യു॒ജ്രേ കി॑ലാ॒സ്യഃ॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
+<td class='VargaStyle1'>കോ വേ᳚ദ॒ ജാന॑മേഷാം॒ കോ വാ᳚ പു॒രാ സു॒മ്നേഷ്വാ᳚സ മ॒രുതാം᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | കകുപ്}</span><p>യദ്‌ യു॑യു॒ജ്രേ കി॑ലാ॒സ്യഃ॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഐതാൻ‌ രഥേ᳚ഷു ത॒സ്ഥുഷഃ॒ കഃ ശു॑ശ്രാവ ക॒ഥാ യ॑യുഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ബൃഹതീ}</span><p>കസ്മൈ᳚ സസ്രുഃ സു॒ദാസേ॒, അന്വാ॒പയ॒ ഇളാ᳚ഭിർവൃ॒ഷ്ടയഃ॑ സ॒ഹ ||<span class='MantraNumbering'>{2/16}{5.53.2}{5.4.9.2}{4.3.11.2}{407, 4096}</span></td>
