--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1124,7 +1124,7 @@
 <td class='VargaStyle1'>अ॒द॒त्र॒याद॑यते॒वार्या᳚णिपू॒षाभगो॒,अदि॑ति॒र्वस्त॑उ॒स्रः |<p>इन्द्रो॒विष्णु॒र्वरु॑णोमि॒त्रो,अ॒ग्निरहा᳚निभ॒द्राज॑नयन्तद॒स्माः || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>तन्नो᳚,अन॒र्वास॑वि॒तावरू᳚थं॒तत्‌सिन्ध॑वइ॒षय᳚न्तो॒,अनु॑ग्मन् |<p>उप॒यद्वोचे᳚,अध्व॒रस्य॒होता᳚रा॒यःस्या᳚म॒पत॑यो॒वाज॑रत्नाः || 4 || </td>
+<td class='VargaStyle1'>तन्नो᳚,अन॒र्वास॑वि॒तावरू᳚थं॒तत्‌सिन्ध॑वइ॒षय᳚न्तो॒,अनु॑ग्मन् |<p>उप॒यद्‌वोचे᳚,अध्व॒रस्य॒होता᳚रा॒यःस्या᳚म॒पत॑यो॒वाज॑रत्नाः || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>प्रयेवसु॑भ्य॒ईव॒दानमो॒दुर्येमि॒त्रेवरु॑णेसू॒क्तवा᳚चः |<p>अवै॒त्वभ्वं᳚कृणु॒तावरी᳚योदि॒वस्पृ॑थि॒व्योरव॑सामदेम || 5 || </td>
@@ -1205,7 +1205,7 @@
 <td class='VargaStyle2'>तेहिस्थि॒रस्य॒शव॑सः॒सखा᳚यः॒सन्ति॑धृष्णु॒या | तेयाम॒न्नाधृ॑ष॒द्विन॒स्त्मना᳚पान्ति॒शश्व॑तः || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तेस्य॒न्द्रासो॒नोक्षणोऽति॑ष्कन्दन्ति॒शर्व॑रीः | म॒रुता॒मधा॒महो᳚दि॒विक्ष॒माच॑मन्महे || 3 || </td>
+<td class='VargaStyle2'>तेस्प॒न्द्रासो॒नोक्षणोऽति॑ष्कन्दन्ति॒शर्व॑रीः | म॒रुता॒मधा॒महो᳚दि॒विक्ष॒माच॑मन्महे || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>म॒रुत्सु॑वोदधीमहि॒स्तोमं᳚य॒ज्ञंच॑धृष्णु॒या | विश्वे॒येमानु॑षायु॒गापान्ति॒मर्त्यं᳚रि॒षः || 4 || </td>
@@ -1253,7 +1253,7 @@
 <td class='SuktaLabel'>[45] कोवेदेति षोळशर्चस्य सूक्तस्यात्रेयः श्यावाश्वोमरुतः क्रमेणककुप्‌बृहत्यनुष्टुप्पुर‌उष्णिक्ककुप्‌ सतोबृहती सतोबृहती गायत्री सतोबृहती ककुप्‌ककुब्गायत्री सतोबृहती सतोबृहती ककुप्‌ सतोबृहत्यः |<span class='MantraNumbering'>{अष्टक:4, अध्याय:3}{मंडल:5, सूक्त:53}{अनुवाक:4, सूक्त:9}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>कोवे᳚द॒जान॑मेषां॒कोवा᳚पु॒रासु॒म्नेष्वा᳚सम॒रुता᳚म् | यद्यु॑यु॒ज्रेकि॑ला॒स्यः॑ || 1 || <span class='MantraNumbering'>वर्ग:11</span></td>
+<td class='VargaStyle1'>कोवे᳚द॒जान॑मेषां॒कोवा᳚पु॒रासु॒म्नेष्वा᳚सम॒रुता᳚म् | यद्‌यु॑यु॒ज्रेकि॑ला॒स्यः॑ || 1 || <span class='MantraNumbering'>वर्ग:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ऐतान्‌रथे᳚षुत॒स्थुषः॒कःशु॑श्रावक॒थाय॑युः |<p>कस्मै᳚सस्रुःसु॒दासे॒,अन्वा॒पय॒इळा᳚भिर्वृ॒ष्टयः॑स॒ह || 2 || </td>
