--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 29-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1205,7 +1205,7 @@
 <td class='VargaStyle2'>ತೇಹಿಸ್ಥಿ॒ರಸ್ಯ॒ಶವ॑ಸಃ॒ಸಖಾ᳚ಯಃ॒ಸಂತಿ॑ಧೃಷ್ಣು॒ಯಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ತೇಯಾಮ॒ನ್ನಾಧೃ॑ಷ॒ದ್ವಿನ॒ಸ್ತ್ಮನಾ᳚ಪಾಂತಿ॒ಶಶ್ವ॑ತಃ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇಸ್ಯಂ॒ದ್ರಾಸೋ॒ನೋಕ್ಷಣೋಽತಿ॑ಷ್ಕಂದಂತಿ॒ಶರ್‍ವ॑ರೀಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಮ॒ರುತಾ॒ಮಧಾ॒ಮಹೋ᳚ದಿ॒ವಿಕ್ಷ॒ಮಾಚ॑ಮನ್ಮಹೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle2'>ತೇಸ್ಪಂ॒ದ್ರಾಸೋ॒ನೋಕ್ಷಣೋಽತಿ॑ಷ್ಕಂದಂತಿ॒ಶರ್‍ವ॑ರೀಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಮ॒ರುತಾ॒ಮಧಾ॒ಮಹೋ᳚ದಿ॒ವಿಕ್ಷ॒ಮಾಚ॑ಮನ್ಮಹೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಮ॒ರುತ್ಸು॑ವೋದಧೀಮಹಿ॒ಸ್ತೋಮಂ᳚ಯ॒ಜ್ಞಂಚ॑ಧೃಷ್ಣು॒ಯಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ವಿಶ್ವೇ॒ಯೇಮಾನು॑ಷಾಯು॒ಗಾಪಾಂತಿ॒ಮರ್‍ತ್ಯಂ᳚ರಿ॒ಷಃ(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -1253,13 +1253,13 @@
 <td class='SuktaLabel'>[45] ಕೋವೇದೇತಿ ಷೋಳಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತಃ ಕ್ರಮೇಣಕಕುಪ್‌ಬೃಹತ್ಯನುಷ್ಟುಪ್ಪುರ‌ಉಷ್ಣಿಕ್ಕಕುಪ್‌ ಸತೋಬೃಹತೀ ಸತೋಬೃಹತೀ ಗಾಯತ್ರೀ ಸತೋಬೃಹತೀ ಕಕುಪ್‌ಕಕುಬ್ಗಾಯತ್ರೀ ಸತೋಬೃಹತೀ ಸತೋಬೃಹತೀ ಕಕುಪ್‌ ಸತೋಬೃಹತ್ಯಃ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:3}{ಮಂಡಲ:5, ಸೂಕ್ತ:53}{ಅನುವಾಕ:4, ಸೂಕ್ತ:9}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಕೋವೇ᳚ದ॒ಜಾನ॑ಮೇಷಾಂ॒ಕೋವಾ᳚ಪು॒ರಾಸು॒ಮ್ನೇಷ್ವಾ᳚ಸಮ॒ರುತಾಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಕಕುಪ್}</span><p>ಯದ್ಯು॑ಯು॒ಜ್ರೇಕಿ॑ಲಾ॒ಸ್ಯ॑೧(ಅಃ॒)(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
+<td class='VargaStyle1'>ಕೋವೇ᳚ದ॒ಜಾನ॑ಮೇಷಾಂ॒ಕೋವಾ᳚ಪು॒ರಾಸು॒ಮ್ನೇಷ್ವಾ᳚ಸಮ॒ರುತಾಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಕಕುಪ್}</span><p>ಯದ್‌ಯು॑ಯು॒ಜ್ರೇಕಿ॑ಲಾ॒ಸ್ಯ॑೧(ಅಃ॒)(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಐತಾನ್‌ರಥೇ᳚ಷುತ॒ಸ್ಥುಷಃ॒ಕಃಶು॑ಶ್ರಾವಕ॒ಥಾಯ॑ಯುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಬೃಹತೀ}</span><p>ಕಸ್ಮೈ᳚ಸಸ್ರುಃಸು॒ದಾಸೇ॒,ಅನ್ವಾ॒ಪಯ॒ಇಳಾ᳚ಭಿರ್‍ವೃ॒ಷ್ಟಯಃ॑ಸ॒ಹ(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ಐತಾನ್‌ರಥೇ᳚ಷುತ॒ಸ್ಥುಷಃ॒ಕಃಶು॑ಶ್ರಾವಕ॒ಥಾಯ॑ಯುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಬೃಹತೀ}</span><p>ಕಸ್ಮೈ᳚ಸಸ್ರುಃಸು॒ದಾಸೇ॒,ಅನ್ವಾ॒ಪಯ॒ಇಳಾ᳚ಭಿರ್‌ವೃ॒ಷ್ಟಯಃ॑ಸ॒ಹ(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತೇಮ॑ಆಹು॒ರ್‍ಯಆ᳚ಯ॒ಯುರುಪ॒ದ್ಯುಭಿ॒ರ್‍ವಿಭಿ॒ರ್ಮದೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ನರೋ॒ಮರ್‍ಯಾ᳚,ಅರೇ॒ಪಸ॑ಇ॒ಮಾನ್‌ಪಶ್ಯ॒ನ್ನಿತಿ॑ಷ್ಟುಹಿ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ತೇಮ॑ಆಹು॒ರ್‍ಯಆ᳚ಯ॒ಯುರುಪ॒ದ್ಯುಭಿ॒ರ್‌ವಿಭಿ॒ರ್ಮದೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ನರೋ॒ಮರ್‍ಯಾ᳚,ಅರೇ॒ಪಸ॑ಇ॒ಮಾನ್‌ಪಶ್ಯ॒ನ್ನಿತಿ॑ಷ್ಟುಹಿ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯೇ,ಅಂ॒ಜಿಷು॒ಯೇವಾಶೀ᳚ಷು॒ಸ್ವಭಾ᳚ನವಃಸ್ರ॒ಕ್ಷುರು॒ಕ್ಮೇಷು॑ಖಾ॒ದಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪುರಉಷ್ಣಿಕ್}</span><p>ಶ್ರಾ॒ಯಾರಥೇ᳚ಷು॒ಧನ್ವ॑ಸು॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -1271,7 +1271,7 @@
 <td class='VargaStyle2'>ಆಯಂನರಃ॑ಸು॒ದಾನ॑ವೋದದಾ॒ಶುಷೇ᳚ದಿ॒ವಃಕೋಶ॒ಮಚು॑ಚ್ಯವುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ವಿಪ॒ರ್ಜನ್ಯಂ᳚ಸೃಜಂತಿ॒ರೋದ॑ಸೀ॒,ಅನು॒ಧನ್ವ॑ನಾಯಂತಿವೃ॒ಷ್ಟಯಃ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃಸಿಂಧ॑ವಃ॒,ಕ್ಷೋದ॑ಸಾ॒ರಜಃ॒ಪ್ರಸ॑ಸ್ರುರ್ಧೇ॒ನವೋ᳚ಯಥಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ಸ್ಯ॒ನ್ನಾ,ಅಶ್ವಾ᳚,ಇ॒ವಾಧ್ವ॑ನೋವಿ॒ಮೋಚ॑ನೇ॒ವಿಯದ್‌ವರ್‍ತಂ᳚ತಏ॒ನ್ಯ॑೧(ಅಃ॒)(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaStyle2'>ತ॒ತೃ॒ದಾ॒ನಾಃಸಿಂಧ॑ವಃ॒,ಕ್ಷೋದ॑ಸಾ॒ರಜಃ॒ಪ್ರಸ॑ಸ್ರುರ್‌ಧೇ॒ನವೋ᳚ಯಥಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಸತೋಬೃಹತೀ}</span><p>ಸ್ಯ॒ನ್ನಾ,ಅಶ್ವಾ᳚,ಇ॒ವಾಧ್ವ॑ನೋವಿ॒ಮೋಚ॑ನೇ॒ವಿಯದ್‌ವರ್‍ತಂ᳚ತಏ॒ನ್ಯ॑೧(ಅಃ॒)(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಆಯಾ᳚ತಮರುತೋದಿ॒ವಆಂತರಿ॑ಕ್ಷಾದ॒ಮಾದು॒ತ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಗಾಯತ್ರೀ}</span><p>ಮಾವ॑ಸ್ಥಾತಪರಾ॒ವತಃ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
