--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1452,7 +1452,7 @@
 <td class='VargaStyle1'>അ॒ദ॒ത്ര॒യാദ॑യതേ॒വാര്യാ᳚ണിപൂ॒ഷാഭഗോ॒,അദി॑തി॒ർവസ്ത॑ഉ॒സ്രഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഇന്ദ്രോ॒വിഷ്ണു॒ർവരു॑ണോമി॒ത്രോ,അ॒ഗ്നിരഹാ᳚നിഭ॒ദ്രാജ॑നയന്തദ॒സ്മാഃ(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തന്നോ᳚,അന॒ർവാസ॑വി॒താവരൂ᳚ഥം॒തത്‌സിന്ധ॑വഇ॒ഷയ᳚ന്തോ॒,അനു॑ഗ്മൻ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉപ॒യദ്വോചേ᳚,അധ്വ॒രസ്യ॒ഹോതാ᳚രാ॒യഃസ്യാ᳚മ॒പത॑യോ॒വാജ॑രത്നാഃ॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>തന്നോ᳚,അന॒ർവാസ॑വി॒താവരൂ᳚ഥം॒തത്‌സിന്ധ॑വഇ॒ഷയ᳚ന്തോ॒,അനു॑ഗ്മൻ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | ത്രിഷ്ടുപ്}</span><p>ഉപ॒യദ്‌വോചേ᳚,അധ്വ॒രസ്യ॒ഹോതാ᳚രാ॒യഃസ്യാ᳚മ॒പത॑യോ॒വാജ॑രത്നാഃ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പ്രയേവസു॑ഭ്യ॒ഈവ॒ദാനമോ॒ദുര്യേമി॒ത്രേവരു॑ണേസൂ॒ക്തവാ᳚ചഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പ്രതിപ്രഭുഃ | വിശ്വദേവാഃ | തൃണപാണിഃ}</span><p>അവൈ॒ത്വഭ്വം᳚കൃണു॒താവരീ᳚യോദി॒വസ്പൃ॑ഥി॒വ്യോരവ॑സാമദേമ॒(സ്വാഹാ᳚) || 5 || </td>
@@ -1536,7 +1536,7 @@
 <td class='VargaStyle2'>തേഹിസ്ഥി॒രസ്യ॒ശവ॑സഃ॒സഖാ᳚യഃ॒സന്തി॑ധൃഷ്ണു॒യാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>തേയാമ॒ന്നാധൃ॑ഷ॒ദ്വിന॒സ്ത്മനാ᳚പാന്തി॒ശശ്വ॑തഃ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേസ്യ॒ന്ദ്രാസോ॒നോക്ഷണോഽതി॑ഷ്കന്ദന്തി॒ശർവ॑രീഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>മ॒രുതാ॒മധാ॒മഹോ᳚ദി॒വിക്ഷ॒മാച॑മന്മഹേ॒(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle2'>തേസ്പ॒ന്ദ്രാസോ॒നോക്ഷണോഽതി॑ഷ്കന്ദന്തി॒ശർവ॑രീഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>മ॒രുതാ॒മധാ॒മഹോ᳚ദി॒വിക്ഷ॒മാച॑മന്മഹേ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>മ॒രുത്സു॑വോദധീമഹി॒സ്തോമം᳚യ॒ജ്ഞംച॑ധൃഷ്ണു॒യാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>വിശ്വേ॒യേമാനു॑ഷായു॒ഗാപാന്തി॒മർത്യം᳚രി॒ഷഃ(സ്വാഹാ᳚) || 4 || </td>
@@ -1585,7 +1585,7 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>കോവേ᳚ദ॒ജാന॑മേഷാം॒കോവാ᳚പു॒രാസു॒മ്നേഷ്വാ᳚സമ॒രുതാം᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | കകുപ്}</span><p>യദ്യു॑യു॒ജ്രേകി॑ലാ॒സ്യ॑1(അഃ॒)(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
+<td class='VargaStyle1'>കോവേ᳚ദ॒ജാന॑മേഷാം॒കോവാ᳚പു॒രാസു॒മ്നേഷ്വാ᳚സമ॒രുതാം᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | കകുപ്}</span><p>യദ്‌യു॑യു॒ജ്രേകി॑ലാ॒സ്യ॑1(അഃ॒)(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഐതാൻ‌രഥേ᳚ഷുത॒സ്ഥുഷഃ॒കഃശു॑ശ്രാവക॒ഥായ॑യുഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ബൃഹതീ}</span><p>കസ്മൈ᳚സസ്രുഃസു॒ദാസേ॒,അന്വാ॒പയ॒ഇളാ᳚ഭിർവൃ॒ഷ്ടയഃ॑സ॒ഹ(സ്വാഹാ᳚) || 2 || </td>
