--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 19-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1401,7 +1401,7 @@
 <td class='VargaStyle1'>அ॒த³॒த்ர॒யா த³॑யதே॒ வார்யா᳚ணி பூ॒ஷா ப⁴கோ³॒, அதி³॑தி॒ர்வஸ்த॑ உ॒ஸ்ர꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ப்ரதிப்ரபு⁴꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>இந்த்³ரோ॒ விஷ்ணு॒ர்வரு॑ணோ மி॒த்ரோ, அ॒க்³நிரஹா᳚னி ப⁴॒த்³ரா ஜ॑னயந்த த³॒ஸ்மா꞉ ||<span class='MantraNumbering'>{3/5}{5.49.3}{5.4.5.3}{4.3.3.3}{403, 4055}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>தன்னோ᳚, அன॒ர்வா ஸ॑வி॒தா வரூ᳚த²ம்॒ʼ தத்‌ ஸிந்த⁴॑வ இ॒ஷய᳚ந்தோ॒, அனு॑ க்³மன் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ப்ரதிப்ரபு⁴꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உப॒ யத்³வோசே᳚, அத்⁴வ॒ரஸ்ய॒ ஹோதா᳚ ரா॒ய꞉ ஸ்யா᳚ம॒ பத॑யோ॒ வாஜ॑ரத்னா꞉ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
+<td class='VargaStyle1'>தன்னோ᳚, அன॒ர்வா ஸ॑வி॒தா வரூ᳚த²ம்॒ʼ தத்‌ ஸிந்த⁴॑வ இ॒ஷய᳚ந்தோ॒, அனு॑ க்³மன் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ப்ரதிப்ரபு⁴꞉ | விஶ்வதே³வா꞉ | த்ரிஷ்டுப்}</span><p>உப॒ யத்³‌ வோசே᳚, அத்⁴வ॒ரஸ்ய॒ ஹோதா᳚ ரா॒ய꞉ ஸ்யா᳚ம॒ பத॑யோ॒ வாஜ॑ரத்னா꞉ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ப்ர யே வஸு॑ப்⁴ய॒ ஈவ॒தா³ நமோ॒ து³ர்யே மி॒த்ரே வரு॑ணே ஸூ॒க்தவா᳚ச꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ப்ரதிப்ரபு⁴꞉ | விஶ்வதே³வா꞉ | த்ருʼணபாணி꞉}</span><p>அவை॒த்வப்⁴வம்᳚ʼ க்ருʼணு॒தா வரீ᳚யோ தி³॒வஸ்ப்ரு॑ʼதி²॒வ்யோரவ॑ஸா மதே³ம ||<span class='MantraNumbering'>{5/5}{5.49.5}{5.4.5.5}{4.3.3.5}{403, 4057}</span></td>
@@ -1482,7 +1482,7 @@
 <td class='VargaStyle2'>தே ஹி ஸ்தி²॒ரஸ்ய॒ ஶவ॑ஸ॒꞉ ஸகா²᳚ய॒꞉ ஸந்தி॑ த்⁴ருʼஷ்ணு॒யா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>தே யாம॒ன்னா த்⁴ரு॑ʼஷ॒த்³வின॒ஸ்த்மனா᳚ பாந்தி॒ ஶஶ்வ॑த꞉ ||<span class='MantraNumbering'>{2/17}{5.52.2}{5.4.8.2}{4.3.8.2}{406, 4079}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தே ஸ்ய॒ந்த்³ராஸோ॒ நோக்ஷணோ (அ)தி॑ ஷ்கந்த³ந்தி॒ ஶர்வ॑ரீ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>ம॒ருதா॒மதா⁴॒ மஹோ᳚ தி³॒வி க்ஷ॒மா ச॑ மன்மஹே ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
+<td class='VargaStyle2'>தே ஸ்ப॒ந்த்³ராஸோ॒ நோக்ஷணோ (அ)தி॑ ஷ்கந்த³ந்தி॒ ஶர்வ॑ரீ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>ம॒ருதா॒மதா⁴॒ மஹோ᳚ தி³॒வி க்ஷ॒மா ச॑ மன்மஹே ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ம॒ருத்ஸு॑ வோ த³தீ⁴மஹி॒ ஸ்தோமம்᳚ʼ ய॒ஜ்ஞம்ʼ ச॑ த்⁴ருʼஷ்ணு॒யா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>விஶ்வே॒ யே மானு॑ஷா யு॒கா³ பாந்தி॒ மர்த்யம்᳚ʼ ரி॒ஷ꞉ ||<span class='MantraNumbering'>{4/17}{5.52.4}{5.4.8.4}{4.3.8.4}{406, 4081}</span></td>
@@ -1530,7 +1530,7 @@
 <td class='SuktaLabel'>[53] கோவேதே³தி ஷோளஶர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ ஶ்யாவாஶ்வோமருத꞉ க்ரமேணககுப்‌ப்³ருʼஹத்யனுஷ்டுப்புர‌உஷ்ணிக்ககுப்‌ ஸதோப்³ருʼஹதீ ஸதோப்³ருʼஹதீ கா³யத்ரீ ஸதோப்³ருʼஹதீ ககுப்‌ககுப்³கா³யத்ரீ ஸதோப்³ருʼஹதீ ஸதோப்³ருʼஹதீ ககுப்‌ ஸதோப்³ருʼஹத்ய꞉ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>கோ வே᳚த³॒ ஜான॑மேஷாம்॒ʼ கோ வா᳚ பு॒ரா ஸு॒ம்னேஷ்வா᳚ஸ ம॒ருதா᳚ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ககுப்}</span><p>யத்³யு॑யு॒ஜ்ரே கி॑லா॒ஸ்ய॑꞉ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
+<td class='VargaStyle1'>கோ வே᳚த³॒ ஜான॑மேஷாம்॒ʼ கோ வா᳚ பு॒ரா ஸு॒ம்னேஷ்வா᳚ஸ ம॒ருதா᳚ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ககுப்}</span><p>யத்³‌ யு॑யு॒ஜ்ரே கி॑லா॒ஸ்ய॑꞉ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஐதான்‌ ரதே²᳚ஷு த॒ஸ்து²ஷ॒꞉ க꞉ ஶு॑ஶ்ராவ க॒தா² ய॑யு꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ப்³ருʼஹதீ}</span><p>கஸ்மை᳚ ஸஸ்ரு꞉ ஸு॒தா³ஸே॒, அன்வா॒பய॒ இளா᳚பி⁴ர்வ்ரு॒ʼஷ்டய॑꞉ ஸ॒ஹ ||<span class='MantraNumbering'>{2/16}{5.53.2}{5.4.9.2}{4.3.11.2}{407, 4096}</span></td>
