--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format3/RVS-Tamil-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format3/RVS-Tamil-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1452,7 +1452,7 @@
 <td class='VargaStyle1'>அ॒த³॒த்ர॒யாத³॑யதே॒வார்யா᳚ணிபூ॒ஷாப⁴கோ³॒,அதி³॑தி॒ர்வஸ்த॑உ॒ஸ்ர꞉ |<p>இந்த்³ரோ॒விஷ்ணு॒ர்வரு॑ணோமி॒த்ரோ,அ॒க்³நிரஹா᳚னிப⁴॒த்³ராஜ॑னயந்தத³॒ஸ்மா꞉ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>தன்னோ᳚,அன॒ர்வாஸ॑வி॒தாவரூ᳚த²ம்॒ʼதத்‌ஸிந்த⁴॑வஇ॒ஷய᳚ந்தோ॒,அனு॑க்³மன் |<p>உப॒யத்³வோசே᳚,அத்⁴வ॒ரஸ்ய॒ஹோதா᳚ரா॒ய꞉ஸ்யா᳚ம॒பத॑யோ॒வாஜ॑ரத்னா꞉ || 4 || </td>
+<td class='VargaStyle1'>தன்னோ᳚,அன॒ர்வாஸ॑வி॒தாவரூ᳚த²ம்॒ʼதத்‌ஸிந்த⁴॑வஇ॒ஷய᳚ந்தோ॒,அனு॑க்³மன் |<p>உப॒யத்³‌வோசே᳚,அத்⁴வ॒ரஸ்ய॒ஹோதா᳚ரா॒ய꞉ஸ்யா᳚ம॒பத॑யோ॒வாஜ॑ரத்னா꞉ || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ப்ரயேவஸு॑ப்⁴ய॒ஈவ॒தா³நமோ॒து³ர்யேமி॒த்ரேவரு॑ணேஸூ॒க்தவா᳚ச꞉ |<p>அவை॒த்வப்⁴வம்᳚ʼக்ருʼணு॒தாவரீ᳚யோதி³॒வஸ்ப்ரு॑ʼதி²॒வ்யோரவ॑ஸாமதே³ம || 5 || </td>
@@ -1536,7 +1536,7 @@
 <td class='VargaStyle2'>தேஹிஸ்தி²॒ரஸ்ய॒ஶவ॑ஸ॒꞉ஸகா²᳚ய॒꞉ஸந்தி॑த்⁴ருʼஷ்ணு॒யா | தேயாம॒ன்னாத்⁴ரு॑ʼஷ॒த்³வின॒ஸ்த்மனா᳚பாந்தி॒ஶஶ்வ॑த꞉ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தேஸ்ய॒ந்த்³ராஸோ॒நோக்ஷணோ(அ)தி॑ஷ்கந்த³ந்தி॒ஶர்வ॑ரீ꞉ | ம॒ருதா॒மதா⁴॒மஹோ᳚தி³॒விக்ஷ॒மாச॑மன்மஹே || 3 || </td>
+<td class='VargaStyle2'>தேஸ்ப॒ந்த்³ராஸோ॒நோக்ஷணோ(அ)தி॑ஷ்கந்த³ந்தி॒ஶர்வ॑ரீ꞉ | ம॒ருதா॒மதா⁴॒மஹோ᳚தி³॒விக்ஷ॒மாச॑மன்மஹே || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ம॒ருத்ஸு॑வோத³தீ⁴மஹி॒ஸ்தோமம்᳚ʼய॒ஜ்ஞம்ʼச॑த்⁴ருʼஷ்ணு॒யா | விஶ்வே॒யேமானு॑ஷாயு॒கா³பாந்தி॒மர்த்யம்᳚ʼரி॒ஷ꞉ || 4 || </td>
@@ -1585,7 +1585,7 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>கோவே᳚த³॒ஜான॑மேஷாம்॒ʼகோவா᳚பு॒ராஸு॒ம்னேஷ்வா᳚ஸம॒ருதா᳚ம் | யத்³யு॑யு॒ஜ்ரேகி॑லா॒ஸ்ய॑꞉ || 1 || <span class='MantraNumbering'>வர்க³:11</span></td>
+<td class='VargaStyle1'>கோவே᳚த³॒ஜான॑மேஷாம்॒ʼகோவா᳚பு॒ராஸு॒ம்னேஷ்வா᳚ஸம॒ருதா᳚ம் | யத்³‌யு॑யு॒ஜ்ரேகி॑லா॒ஸ்ய॑꞉ || 1 || <span class='MantraNumbering'>வர்க³:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஐதான்‌ரதே²᳚ஷுத॒ஸ்து²ஷ॒꞉க꞉ஶு॑ஶ்ராவக॒தா²ய॑யு꞉ |<p>கஸ்மை᳚ஸஸ்ரு꞉ஸு॒தா³ஸே॒,அன்வா॒பய॒இளா᳚பி⁴ர்வ்ரு॒ʼஷ்டய॑꞉ஸ॒ஹ || 2 || </td>
