--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1124,7 +1124,7 @@
 <td class='VargaStyle1'>అ॒ద॒త్ర॒యాద॑యతే॒వార్యా᳚ణిపూ॒షాభగో॒,అది॑తి॒ర్వస్త॑ఉ॒స్రః |<p>ఇంద్రో॒విష్ణు॒ర్వరు॑ణోమి॒త్రో,అ॒గ్నిరహా᳚నిభ॒ద్రాజ॑నయంతద॒స్మాః || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>తన్నో᳚,అన॒ర్వాస॑వి॒తావరూ᳚థం॒తత్‌సింధ॑వఇ॒షయం᳚తో॒,అను॑గ్మన్ |<p>ఉప॒యద్వోచే᳚,అధ్వ॒రస్య॒హోతా᳚రా॒యఃస్యా᳚మ॒పత॑యో॒వాజ॑రత్నాః || 4 || </td>
+<td class='VargaStyle1'>తన్నో᳚,అన॒ర్వాస॑వి॒తావరూ᳚థం॒తత్‌సింధ॑వఇ॒షయం᳚తో॒,అను॑గ్మన్ |<p>ఉప॒యద్‌వోచే᳚,అధ్వ॒రస్య॒హోతా᳚రా॒యఃస్యా᳚మ॒పత॑యో॒వాజ॑రత్నాః || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ప్రయేవసు॑భ్య॒ఈవ॒దానమో॒దుర్యేమి॒త్రేవరు॑ణేసూ॒క్తవా᳚చః |<p>అవై॒త్వభ్వం᳚కృణు॒తావరీ᳚యోది॒వస్పృ॑థి॒వ్యోరవ॑సామదేమ || 5 || </td>
@@ -1205,7 +1205,7 @@
 <td class='VargaStyle2'>తేహిస్థి॒రస్య॒శవ॑సః॒సఖా᳚యః॒సంతి॑ధృష్ణు॒యా | తేయామ॒న్నాధృ॑ష॒ద్విన॒స్త్మనా᳚పాంతి॒శశ్వ॑తః || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తేస్యం॒ద్రాసో॒నోక్షణోఽతి॑ష్కందంతి॒శర్వ॑రీః | మ॒రుతా॒మధా॒మహో᳚ది॒విక్ష॒మాచ॑మన్మహే || 3 || </td>
+<td class='VargaStyle2'>తేస్పం॒ద్రాసో॒నోక్షణోఽతి॑ష్కందంతి॒శర్వ॑రీః | మ॒రుతా॒మధా॒మహో᳚ది॒విక్ష॒మాచ॑మన్మహే || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>మ॒రుత్సు॑వోదధీమహి॒స్తోమం᳚య॒జ్ఞంచ॑ధృష్ణు॒యా | విశ్వే॒యేమాను॑షాయు॒గాపాంతి॒మర్త్యం᳚రి॒షః || 4 || </td>
@@ -1253,7 +1253,7 @@
 <td class='SuktaLabel'>[45] కోవేదేతి షోళశర్చస్య సూక్తస్యాత్రేయః శ్యావాశ్వోమరుతః క్రమేణకకుప్‌బృహత్యనుష్టుప్పుర‌ఉష్ణిక్కకుప్‌ సతోబృహతీ సతోబృహతీ గాయత్రీ సతోబృహతీ కకుప్‌కకుబ్గాయత్రీ సతోబృహతీ సతోబృహతీ కకుప్‌ సతోబృహత్యః |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:3}{మండల:5, సూక్త:53}{అనువాక:4, సూక్త:9}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>కోవే᳚ద॒జాన॑మేషాం॒కోవా᳚పు॒రాసు॒మ్నేష్వా᳚సమ॒రుతాం᳚ | యద్యు॑యు॒జ్రేకి॑లా॒స్యః॑ || 1 || <span class='MantraNumbering'>వర్గ:11</span></td>
+<td class='VargaStyle1'>కోవే᳚ద॒జాన॑మేషాం॒కోవా᳚పు॒రాసు॒మ్నేష్వా᳚సమ॒రుతాం᳚ | యద్‌యు॑యు॒జ్రేకి॑లా॒స్యః॑ || 1 || <span class='MantraNumbering'>వర్గ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఐతాన్‌రథే᳚షుత॒స్థుషః॒కఃశు॑శ్రావక॒థాయ॑యుః |<p>కస్మై᳚సస్రుఃసు॒దాసే॒,అన్వా॒పయ॒ఇళా᳚భిర్వృ॒ష్టయః॑స॒హ || 2 || </td>
