--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 19-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 18-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1401,7 +1401,7 @@
 <td class='VargaStyle1'>అ॒ద॒త్ర॒యా ద॑యతే॒ వార్యా᳚ణి పూ॒షా భగో॒, అది॑తి॒ర్వస్త॑ ఉ॒స్రః |<span class='RishiDevChandas'>{ఆత్రేయః ప్రతిప్రభుః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఇంద్రో॒ విష్ణు॒ర్వరు॑ణో మి॒త్రో, అ॒గ్నిరహా᳚ని భ॒ద్రా జ॑నయంత ద॒స్మాః ||<span class='MantraNumbering'>{3/5}{5.49.3}{5.4.5.3}{4.3.3.3}{403, 4055}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>తన్నో᳚, అన॒ర్వా స॑వి॒తా వరూ᳚థం॒ తత్‌ సింధ॑వ ఇ॒షయం᳚తో॒, అను॑ గ్మన్ |<span class='RishiDevChandas'>{ఆత్రేయః ప్రతిప్రభుః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉప॒ యద్వోచే᳚, అధ్వ॒రస్య॒ హోతా᳚ రా॒యః స్యా᳚మ॒ పత॑యో॒ వాజ॑రత్నాః ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
+<td class='VargaStyle1'>తన్నో᳚, అన॒ర్వా స॑వి॒తా వరూ᳚థం॒ తత్‌ సింధ॑వ ఇ॒షయం᳚తో॒, అను॑ గ్మన్ |<span class='RishiDevChandas'>{ఆత్రేయః ప్రతిప్రభుః | విశ్వదేవాః | త్రిష్టుప్}</span><p>ఉప॒ యద్‌ వోచే᳚, అధ్వ॒రస్య॒ హోతా᳚ రా॒యః స్యా᳚మ॒ పత॑యో॒ వాజ॑రత్నాః ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ప్ర యే వసు॑భ్య॒ ఈవ॒దా నమో॒ దుర్యే మి॒త్రే వరు॑ణే సూ॒క్తవా᳚చః |<span class='RishiDevChandas'>{ఆత్రేయః ప్రతిప్రభుః | విశ్వదేవాః | తృణపాణిః}</span><p>అవై॒త్వభ్వం᳚ కృణు॒తా వరీ᳚యో ది॒వస్పృ॑థి॒వ్యోరవ॑సా మదేమ ||<span class='MantraNumbering'>{5/5}{5.49.5}{5.4.5.5}{4.3.3.5}{403, 4057}</span></td>
@@ -1482,7 +1482,7 @@
 <td class='VargaStyle2'>తే హి స్థి॒రస్య॒ శవ॑సః॒ సఖా᳚యః॒ సంతి॑ ధృష్ణు॒యా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>తే యామ॒న్నా ధృ॑ష॒ద్విన॒స్త్మనా᳚ పాంతి॒ శశ్వ॑తః ||<span class='MantraNumbering'>{2/17}{5.52.2}{5.4.8.2}{4.3.8.2}{406, 4079}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తే స్యం॒ద్రాసో॒ నోక్షణో ఽతి॑ ష్కందంతి॒ శర్వ॑రీః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>మ॒రుతా॒మధా॒ మహో᳚ ది॒వి క్ష॒మా చ॑ మన్మహే ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
+<td class='VargaStyle2'>తే స్పం॒ద్రాసో॒ నోక్షణో ఽతి॑ ష్కందంతి॒ శర్వ॑రీః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>మ॒రుతా॒మధా॒ మహో᳚ ది॒వి క్ష॒మా చ॑ మన్మహే ||<span class='MantraNumbering'>{3/17}{5.52.3}{5.4.8.3}{4.3.8.3}{406, 4080}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>మ॒రుత్సు॑ వో దధీమహి॒ స్తోమం᳚ య॒జ్ఞం చ॑ ధృష్ణు॒యా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>విశ్వే॒ యే మాను॑షా యు॒గా పాంతి॒ మర్త్యం᳚ రి॒షః ||<span class='MantraNumbering'>{4/17}{5.52.4}{5.4.8.4}{4.3.8.4}{406, 4081}</span></td>
@@ -1530,7 +1530,7 @@
 <td class='SuktaLabel'>[53] కోవేదేతి షోళశర్చస్య సూక్తస్యాత్రేయః శ్యావాశ్వోమరుతః క్రమేణకకుప్‌బృహత్యనుష్టుప్పుర‌ఉష్ణిక్కకుప్‌ సతోబృహతీ సతోబృహతీ గాయత్రీ సతోబృహతీ కకుప్‌కకుబ్గాయత్రీ సతోబృహతీ సతోబృహతీ కకుప్‌ సతోబృహత్యః |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>కో వే᳚ద॒ జాన॑మేషాం॒ కో వా᳚ పు॒రా సు॒మ్నేష్వా᳚స మ॒రుతాం᳚ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | కకుప్}</span><p>యద్యు॑యు॒జ్రే కి॑లా॒స్యః॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
+<td class='VargaStyle1'>కో వే᳚ద॒ జాన॑మేషాం॒ కో వా᳚ పు॒రా సు॒మ్నేష్వా᳚స మ॒రుతాం᳚ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | కకుప్}</span><p>యద్‌ యు॑యు॒జ్రే కి॑లా॒స్యః॑ ||<span class='MantraNumbering'>{1/16}{5.53.1}{5.4.9.1}{4.3.11.1}{407, 4095}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఐతాన్‌ రథే᳚షు త॒స్థుషః॒ కః శు॑శ్రావ క॒థా య॑యుః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | బృహతీ}</span><p>కస్మై᳚ సస్రుః సు॒దాసే॒, అన్వా॒పయ॒ ఇళా᳚భిర్వృ॒ష్టయః॑ స॒హ ||<span class='MantraNumbering'>{2/16}{5.53.2}{5.4.9.2}{4.3.11.2}{407, 4096}</span></td>
